--- a/Hangman/Hangman.csproj
+++ b/Hangman/Hangman.csproj
@@ -63,8 +63,12 @@
     <Compile Include="PlayerName.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="tblHangmanDB.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\PlayerData.sqlite">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AndroidAsset>
     <None Include="GettingStarted.Xamarin" />
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
