Starting to add in the DB

--- a/Hangman/Hangman.csproj
+++ b/Hangman/Hangman.csproj
@@ -57,6 +57,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAdapter.cs" />
+    <Compile Include="DatabaseManager.cs" />
+    <Compile Include="DBMainActivity.cs" />
     <Compile Include="Hangman.cs" />
     <Compile Include="HighScores.cs" />
     <Compile Include="Menu.cs" />
